log
Sat, May 17, 2025 10:41:03 AM: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025 10:42:17 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c7b1964
Sat, May 17, 2025  3:47:31 PM: 
 sudoku.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
dedd028
Sat, May 17, 2025  3:50:02 PM: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
13df8bd
Sat, May 17, 2025  3:59:55 PM: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:145:7: error: implicit declaration of function 'cleanStack' [-Werror=implicit-function-declaration]
       cleanStack(S);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
bd9c082
Sat, May 17, 2025  4:00:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
a7f3dfc
Sat, May 17, 2025  4:06:05 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
d7f96ca
